<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/spinner_edit_item_fragment_guide_vertical_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/spinner_edit_item_fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_fragment_spinner_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/spinner_edit_item_color_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/background_fragment_spinner_edit_top_whore"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/spinner_edit_item_textview_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/spinner_edit_header"
        android:textColor="@color/colorPrimaryLight"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:gravity="left|center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/spinner_edit_item_fragment_prompt"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/spinner_edit_item_prompt"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:maxLines="3"
        app:autoSizeTextType="uniform"
        app:layout_constraintVertical_weight="4"
        app:layout_constraintTop_toBottomOf="@id/spinner_edit_item_color_top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/spinner_edit_item_fragment_edittext"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/background_fragment_spinner_edit_textfield"
        android:inputType="textCapSentences"
        android:maxLength="25"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:gravity="left|center"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintTop_toBottomOf="@id/spinner_edit_item_fragment_prompt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinner_edit_item_fragment_revert"
        />

    <TextView
        android:id="@+id/spinner_edit_item_fragment_revert"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/spinner_item_revert"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryMedium"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:maxLines="2"
        app:autoSizeTextType="uniform"
        app:layout_constraintTop_toBottomOf="@id/spinner_edit_item_fragment_edittext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/spinner_edit_item_fragment_save_button"
        />

    <Button
        android:id="@+id/spinner_edit_item_fragment_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/spinner_edit_item_fragment_guide_vertical_50"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/spinner_edit_item_fragment_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="@id/spinner_edit_item_fragment_guide_vertical_50"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>