<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/dude_fragment_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_fragment"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <android.support.constraint.Guideline
        android:id="@+id/dude_fragment_guide_vertical_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <android.support.constraint.Guideline
        android:id="@+id/dude_fragment_guide_vertical_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"
        />



    <TextView
        android:id="@+id/dude_fragment_color_header"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/background_fragment_top_whore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/dude_fragment_textview_header"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimaryLight"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/dude_fragment_textview_index"
        android:layout_width="60dp"
        android:layout_height="34dp"
        android:background="@drawable/background_fragment_index"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Spinner
        android:id="@+id/dude_fragment_spinner_property"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dude_fragment_textview_header"
        />


    <TextView
        android:id="@+id/dude_fragment_prompt_info"
        android:text="@string/info_prompt"
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.3"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dude_fragment_spinner_property"
        app:layout_constraintBottom_toTopOf="@id/dude_fragment_cancel_button"
        />

    <TextView
        android:id="@+id/dude_fragment_date_textview"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:paddingLeft="12dp"
        android:paddingRight="36dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dude_fragment_spinner_property"
        app:layout_constraintBottom_toTopOf="@id/dude_fragment_edittext_info"
        />


    <EditText
        android:id="@+id/dude_fragment_edittext_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:gravity="top"
        android:paddingLeft="12dp"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dude_fragment_date_textview"
        app:layout_constraintBottom_toTopOf="@id/dude_fragment_cancel_button"
        />

    <Button
        android:id="@+id/dude_fragment_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/dude_fragment_guide_vertical_50"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/dude_fragment_save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:layout_constraintLeft_toLeftOf="@id/dude_fragment_guide_vertical_50"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</android.support.constraint.ConstraintLayout>